syntax = "proto3";
package bitcoin.blockchain;
//option go_package = "./bitcoin";

import "bitcoin/blockchain.message.proto";

service Blockchain {
	rpc GetBlockCount(GetBlockCountRequest) returns (GetBlockCountResponse);
	rpc GetBlockHash(GetBlockHashRequest) returns (GetBlockHashResponse);
	rpc GetBlock(GetBlockRequest) returns (GetBlockResponse);
}
